# text-editor

./: index.html  package-lock.json  package.json
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/assets/: index.css
src/lib/: calculate.ts  create-cursors.ts  create-editor.ts  create-hidden-textarea.ts  create-lines.ts  cursor-position.ts  drag-cursor.ts  drop-cursor.ts  exec-command.ts  kaku.ts  mount.ts  resize-observer.ts  selection-ranges.ts  settings.ts  state.ts  text-measurement.ts  update-cursors.ts  update-selections.ts
src/lib/commands/: cursor.ts  history.ts  input.ts
