[package]
name = "text-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.8", features = [ "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
window-vibrancy = "0.5.2"
tauri-plugin-clipboard-manager = "2.0.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
